8338124: C2 SuperWord: MulAddS2I input permutation still partially broken after JDK-8333840

Reviewed-by: chagedorn, thartmann, kvn